--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+/*
+    This is a project for Internet Engineering Course - Fall 2022
+    Final Project.
+    @author : Mahdi Rahmani
+*/
 body, html {
     background-color: rgb(99, 94, 94);
 }
